build: Removed unnecessary Java arguments from old HTTP client